set the box 7px down and 5px left

--- a/style.css
+++ b/style.css
@@ -5,8 +5,11 @@ html, body {
 }
 
 .fuck-you-world {
+    position: relative;
     background-color: yellow;
     width: 200px;
     height: 200px;
     margin: auto;
+    top: 7px;
+    left: 5px;
 }
