--- a/style.css
+++ b/style.css
@@ -1,15 +1,35 @@
 html, body {
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 100vw;
+}
+body {
 }
 
 .fuck-you-world {
+
     position: relative;
     background-color: yellow;
     width: 200px;
     height: 200px;
-    margin: auto;
+    margin: 0 50%;
     top: 7px;
     left: 5px;
+}
+.fuck-box1 {
+    background-color: red;
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    bottom: 0;
+}
+
+.fuck-box2 {
+    background-color: rgb(0, 255, 85);
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    bottom: 10px;
+    left: 10px
+    
 }
